--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,19 +1,16 @@
+{# templates/registration/register.html.twig #}
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
-    {{ form_errors(registrationForm) }}
+    <h1>Inscription</h1>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.nom) }}
         {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        {{ form_row(registrationForm.plainPassword) }}
+        <button type="submit">S'inscrire</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
