--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,10 +1,11 @@
-{# templates/security/login.html.twig #}
-
 {% extends 'base.html.twig' %}
 
 {% block body %}
     <h1>Se connecter</h1>
-    <form action="{{ path('app_login') }}" method="post">
+    
+    <form action="{{ path('app_login') }}" method="POST">
+        <input type="hidden" name="_csrf_token"
+           value="{{ csrf_token('authenticate') }}">
         <label for="email">Email :</label>
         <input type="text" id="email" name="_username" required>
         <br>
@@ -13,4 +14,10 @@
         <br>
         <button type="submit">Se connecter</button>
     </form>
+
+    {% if error %}
+        <div class="alert alert-danger">
+            {{ error.messageKey|trans(error.messageData, 'security') }}
+        </div>
+    {% endif %}
 {% endblock %}
