--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -1,5 +1,55 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Home</h1>
+	<section class="bg-white dark:bg-gray-900">
+		<div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+			<div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
+				<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">We didn't reinvent the wheel</h2>
+				<p class="mb-4">We are strategists, designers and developers. Innovators and problem solvers. Small enough to be simple and quick, but big enough to deliver the scope you want at the pace you need. Small enough to be simple and quick, but big enough to deliver the scope you want at the pace you need.</p>
+				<p>We are strategists, designers and developers. Innovators and problem solvers. Small enough to be simple and quick.</p>
+			</div>
+			<div class="grid grid-cols-2 gap-4 mt-8">
+				<img class="w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/content/office-long-2.png" alt="office content 1">
+				<img class="mt-4 w-full lg:mt-10 rounded-lg" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/content/office-long-1.png" alt="office content 2">
+			</div>
+		</div>
+	</section>
+	<section class="bg-white dark:bg-gray-900">
+		<div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+			<div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12">
+				<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Catégories</h2>
+				<p class="mb-5 font-light text-gray-500 sm:text-xl dark:text-gray-400">Réservez des équipements d'équitation en toute simplicité.</p>
+			</div>
+			<div
+				class="space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0">
+				<!-- Pricing Card -->
+				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
+					<h3 class="mb-4 text-2xl font-semibold">Cavalier</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Équipements pour homme.</p>
+					<div class="flex justify-center items-baseline my-8">
+						<img src="{{ asset('img/Cavalier.jpg') }}" alt="Cavalier" class="rounded-lg shadow-md">
+					</div>
+					<a href="#" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+				</div>
+				<!-- Pricing Card -->
+				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
+					<h3 class="mb-4 text-2xl font-semibold">Cavalière</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Équipements pour femme.</p>
+					<div class="flex justify-center items-baseline my-8">
+						<img src="{{ asset('img/Cavaliere.jpg') }}" alt="Cavaliere" class="rounded-lg shadow-md">
+					</div>
+					<a href="#" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+				</div>
+				<!-- Pricing Card -->
+				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
+					<h3 class="mb-4 text-2xl font-semibold">Équipements pour enfant.</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Enfants</p>
+					<div class="flex justify-center items-baseline my-8">
+						<img src="{{ asset('img/Enfant.jpg') }}" alt="Enfant" class="rounded-lg shadow-md">
+					</div>
+					<a href="#" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
