--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -18,7 +18,7 @@
 		<div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
 			<div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12">
 				<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Catégories</h2>
-				<p class="mb-5 font-light text-gray-500 sm:text-xl dark:text-gray-400">Réservez des équipements d'équitation en toute simplicité.</p>
+				<p class="mb-5 font-light text-gray-500 sm:text-xl dark:text-gray-400">Réservez des équipements en toute simplicité</p>
 			</div>
 			<div
 				class="space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0">
@@ -29,7 +29,7 @@
 					<div class="flex justify-center items-baseline my-8">
 						<img src="{{ asset('img/Cavalier.jpg') }}" alt="Cavalier" class="rounded-lg shadow-md">
 					</div>
-					<a href="#" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+					<a href="{{ path('produit_type', { 'categorie' : 'cavalier' }) }}" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
 				</div>
 				<!-- Pricing Card -->
 				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
@@ -38,16 +38,40 @@
 					<div class="flex justify-center items-baseline my-8">
 						<img src="{{ asset('img/Cavaliere.jpg') }}" alt="Cavaliere" class="rounded-lg shadow-md">
 					</div>
-					<a href="#" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+					<a href="{{ path('produit_type', { 'categorie' : 'cavalière' }) }}" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
 				</div>
 				<!-- Pricing Card -->
 				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
-					<h3 class="mb-4 text-2xl font-semibold">Équipements pour enfant.</h3>
-					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Enfants</p>
+					<h3 class="mb-4 text-2xl font-semibold">Enfant</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Équipements pour enfant.</p>
 					<div class="flex justify-center items-baseline my-8">
 						<img src="{{ asset('img/Enfant.jpg') }}" alt="Enfant" class="rounded-lg shadow-md">
 					</div>
-					<a href="#" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+					<a href="{{ path('produit_type', { 'categorie' : 'enfant' }) }}" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+				</div>
+				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
+					<h3 class="mb-4 text-2xl font-semibold">Cheval</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Équipements pour cheval.</p>
+					<div class="flex justify-center items-baseline my-8">
+						<img src="{{ asset('img/Cheval.jpg') }}" alt="Enfant" class="rounded-lg shadow-md">
+					</div>
+					<a href="{{ path('produit_type', { 'categorie' : 'cheval' }) }}" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+				</div>
+				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
+					<h3 class="mb-4 text-2xl font-semibold">Écurie</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Équipements pour écurie.</p>
+					<div class="flex justify-center items-baseline my-8">
+						<img src="{{ asset('img/Ecurie.jpg') }}" alt="Enfant" class="rounded-lg shadow-md">
+					</div>
+					<a href="{{ path('produit_type', { 'categorie' : 'écurie' }) }}" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
+				</div>
+				<div class="flex flex-col p-6 mx-auto max-w-lg text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 xl:p-8 dark:bg-gray-800 dark:text-white">
+					<h3 class="mb-4 text-2xl font-semibold">Poney</h3>
+					<p class="font-light text-gray-500 sm:text-lg dark:text-gray-400">Équipements pour poney.</p>
+					<div class="flex justify-center items-baseline my-8">
+						<img src="{{ asset('img/Poney.jpg') }}" alt="Enfant" class="rounded-lg shadow-md">
+					</div>
+					<a href="{{ path('produit_type', { 'categorie' : 'poney' }) }}" class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-primary-900">En savoir plus</a>
 				</div>
 			</div>
 		</div>
