probleme de session regler et debut de la mise en place d'interdiction des page sans utilisé security

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,6 +66,7 @@
 								</li>
 							</ul>
 						</div>
+						<a href="{{ path('app_logout') }}" class="text-primary-600 hover:underline dark:text-primary-500">Déconnexion</a>
 					</div>
 				</nav>
 			</header>
