checkpoint avant la reservation

--- a/templates/Produit/list.html.twig
+++ b/templates/Produit/list.html.twig
@@ -35,6 +35,7 @@
 									<td class="px-4 py-3">{{ produit.etat.value }}</td>
 									<td class="px-4 py-3">{{ produit.categorie_rayon }}</td>
 									<td class="px-4 py-3">{{ produit.etagere }}</td>
+									<td class="px-4 py-3"><button>Réserver</button></td>
 								</tr>
 							{% endfor %}
 						</tbody>
