--- a/templates/Compte/Historiques.html.twig
+++ b/templates/Compte/Historiques.html.twig
@@ -34,7 +34,7 @@
                                     <td class="px-4 py-3">{{ historique.type_produit }}</td>
 									<td class="px-4 py-3">{{ historique.date_empreinte|date('d/m/Y') }}</td>
 									<td class="px-4 py-3">{{ historique.date_rendu ? historique.date_rendu|date('d/m/Y') : 'En attente de retour' }}</td>
-									<td class="px-4 py-3"><textarea class="h-20" name="signalement"></textarea></td>
+									<td class="px-4 py-3"><textarea class="h-20 dark:bg-gray-700" name="signalement"></textarea></td>
                                     <td class="px-4 py-3">
                                     <form method="post" action="{{ path('produit_rendre')}}">
 										<input type="hidden" name="_csrf_token" value="{{ csrf_token('produit_rendre') }}">
