--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,6 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>
-			{% block title %}Welcome!
-			{% endblock %}
-		</title>
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 
@@ -27,15 +23,10 @@
 			<header>
 				<nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
 					<div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-						<a href="https://flowbite.com" class="flex items-center">
-							<img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo"/>
-							<span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-						</a>
 						<div class="flex items-center lg:order-2">
-							<a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a>
-							<a href="#" class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">Get started</a>
+							<a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Compte</a>
 							<button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
-								<span class="sr-only">Open main menu</span>
+								<span class="sr-only">Ouvre le menu</span>
 								<svg class="w-6 h-6" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
 									<path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
 								</svg>
@@ -47,26 +38,14 @@
 						<div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
 							<ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
 								<li>
-									<a href="#" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white" aria-current="page">Home</a>
+									<a href="{{path('app_home')}}" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white">Accueil</a>
 								</li>
 								<li>
-									<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Company</a>
-								</li>
-								<li>
-									<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Marketplace</a>
-								</li>
-								<li>
-									<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Features</a>
-								</li>
-								<li>
-									<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Team</a>
-								</li>
-								<li>
-									<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+									<a href="{{path('app_historiques')}}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 dark:text-white">Historiques</a>
 								</li>
 							</ul>
 						</div>
-						<a href="{{ path('app_logout') }}" class="text-primary-600 hover:underline dark:text-primary-500">Déconnexion</a>
+						<a href="{{ path('app_logout') }}" class="text-primary-600 hover:underline text-light-gray-700 dark:text-white">Déconnexion</a>
 					</div>
 				</nav>
 			</header>
@@ -76,28 +55,18 @@
 			<footer class="shadow dark:bg-gray-900">
 				<div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
 					<div class="sm:flex sm:items-center sm:justify-between">
-						<a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-							<img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo"/>
-							<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
 						</a>
 						<ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
 							<li>
-								<a href="#" class="hover:underline me-4 md:me-6">About</a>
+								<a href="{{path('app_home')}}" class="hover:underline me-4 md:me-6">Accueil</a>
 							</li>
 							<li>
-								<a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-							</li>
-							<li>
-								<a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-							</li>
-							<li>
-								<a href="#" class="hover:underline">Contact</a>
+								<a href="{{path('app_historiques')}}" class="hover:underline me-4 md:me-6">Historiques</a>
 							</li>
 						</ul>
 					</div>
 					<hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"/>
-					<span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023
-						<a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.</span>
+					<span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 Ramin Jalili</span>
 				</div>
 			</footer>
 		{% endif %}
