--- a/templates/Compte/Historiques.html.twig
+++ b/templates/Compte/Historiques.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-{{dump(historiques)}}
+	{{dump(historiques)}}
 	<section class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
 		<div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
 			<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"></h2>
@@ -20,9 +20,9 @@
 								<th scope="col" class="px-4 py-3">Nom</th>
 								<th scope="col" class="px-4 py-3">Category</th>
 								<th scope="col" class="px-4 py-3">Type de produit</th>
-                                <th scope="col" class="px-4 py-3">Date d'emprunt</th>
-                                <th scope="col" class="px-4 py-3">Date de retour</th>
-                                <th scope="col" class="px-4 py-3">Signalement</th>
+								<th scope="col" class="px-4 py-3">Date d'emprunt</th>
+								<th scope="col" class="px-4 py-3">Date de retour</th>
+								<th scope="col" class="px-4 py-3">Signalement</th>
 								<th scope="col" class="px-4 py-3">Rendre</th>
 							</tr>
 						</thead>
@@ -30,22 +30,36 @@
 							{% for historique in historiques %}
 								<tr>
 									<td class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ historique.nom }}</td>
-                                    <td class="px-4 py-3">{{ historique.categorie }}</td>
-                                    <td class="px-4 py-3">{{ historique.type_produit }}</td>
+									<td class="px-4 py-3">{{ historique.categorie }}</td>
+									<td class="px-4 py-3">{{ historique.type_produit }}</td>
 									<td class="px-4 py-3">{{ historique.date_empreinte|date('d/m/Y') }}</td>
 									<td class="px-4 py-3">{{ historique.date_rendu ? historique.date_rendu|date('d/m/Y') : 'En attente de retour' }}</td>
-									<td class="px-4 py-3"><textarea class="h-20 dark:bg-gray-700" name="signalement"></textarea></td>
-                                    <td class="px-4 py-3">
-                                    <form method="post" action="{{ path('produit_rendre')}}">
-										<input type="hidden" name="_csrf_token" value="{{ csrf_token('produit_rendre') }}">
+									<form method="post" action="{{ path('produit_rendre')}}">
+									<td class="px-4 py-3">
+										<div
+											class="flex flex-col space-y-2">
+											<label class="flex items-center">
+												<input type="radio" name="signalement" value="Rien a signaler" checked class="mr-2">
+												Rien à signaler
+											</label>
+											<label class="flex items-center">
+												<input type="radio" name="signalement" value="Probleme detecte" class="mr-2">
+												Problème détecté
+											</label>
+										</div>
+									</td>
+
+									<td class="px-4 py-3">
+										
+											<input type="hidden" name="_csrf_token" value="{{ csrf_token('produit_rendre') }}">
 											<input type="hidden" name="id" value="{{ historique.id }}">
-											<input type="hidden" name="etat_init" value="{{ historique.etat_init.value  }}">
+											<input type="hidden" name="etat_init" value="{{ historique.etat_init.value }}">
 											{% if historique.etat.value == 'hors service' or historique.etat.value == 'en reparation' %}
 												<button class="text-white bg-blue-500 hover:bg-blue-700 px-3 py-2 rounded">
 													Rendre
 												</button>
 											{% elseif historique.date_rendu !=  null %}
-											<button type="#" class="text-white bg-red-500 hover:bg-red-700 px-3 py-2 rounded" disabled>
+												<button type="#" class="text-white bg-red-500 hover:bg-red-700 px-3 py-2 rounded" disabled>
 													Rendre
 												</button>
 											{% else %}
@@ -54,7 +68,7 @@
 												</button>
 											{% endif %}
 										</form>
-                                        </td>
+									</td>
 								</tr>
 							{% endfor %}
 						</tbody>
