--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,7 @@
 			{% block importmap %}
 				{{ importmap('app') }}
 			{% endblock %}
+			{{ encore_entry_script_tags('recherche-filtre') }}
 		{% endblock %}
 	</head>
 	<body>
@@ -50,12 +51,13 @@
 				</nav>
 			</header>
 		{% endif %}
-		{% block body %}<main></main>{% endblock %}
+		{% block body %}
+			<main></main>
+		{% endblock %}
 		{% if app.request.attributes.get('_route') not in ['app_login', 'app_register'] %}
 			<footer class="shadow dark:bg-gray-900">
 				<div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
 					<div class="sm:flex sm:items-center sm:justify-between">
-						</a>
 						<ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
 							<li>
 								<a href="{{path('app_home')}}" class="hover:underline me-4 md:me-6">Accueil</a>
@@ -69,6 +71,7 @@
 					<span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 Ramin Jalili</span>
 				</div>
 			</footer>
+
 		{% endif %}
 	</body>
 </html>
