--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,3 +3,21 @@
 @tailwind utilities;
 
 @import 'flowbite';
+
+/* S'assurer que l'élément body prend toute la hauteur de la fenêtre */
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  /* Utiliser Flexbox sur le body */
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  /* Placer le footer en bas de la page */
+  footer {
+    margin-top: auto; /* Pousse le footer au bas de la page */
+  }
+  
