--- a/templates/admin/home/home.html.twig
+++ b/templates/admin/home/home.html.twig
@@ -46,7 +46,7 @@
 				</div>
                 <div class="flex flex-col justify-center items-center p-4 mx-auto max-w-xl w-full text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 dark:bg-gray-800 dark:text-white" style="height: 500px;">
 					<h3 class="text-5xl font-semibold">
-						<a href="" class="text-primary-600 hover:underline dark:text-primary-400">
+						<a href="{{ path('app_maintenance') }}" class="text-primary-600 hover:underline dark:text-primary-400">
 							Maintenance
 						</a>
 					</h3>
