--- a/templates/Compte/Historiques.html.twig
+++ b/templates/Compte/Historiques.html.twig
@@ -10,7 +10,7 @@
 			</p>
 		</div>
 		<div
-			class="mx-auto max-w-screen-xl px-4 lg:px-12">
+			class="min-h-screen flex flex-col mx-auto max-w-screen-xl px-4 lg:px-12">
 			<!-- Start coding here -->
 			<div class="bg-white dark:bg-gray-800 relative shadow-md sm:rounded-lg overflow-hidden">
 				<div class="overflow-x-auto">
