--- a/templates/Produit/list.html.twig
+++ b/templates/Produit/list.html.twig
@@ -5,7 +5,7 @@
 		<div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
 			<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"></h2>
 			<p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">
-				Voici une liste de tous les produits disponibles pour affiner votre recherche, vous pouvez utiliser la barre de recherche.
+				Voici une liste de tous les produits disponibles pour filtrer ou réserver un produit spécifique, vous pouvez utiliser la barre de recherche.
 			</p>
 		</div>
 		<div class="mx-auto max-w-screen-xl px-4 lg:px-12">
