--- a/templates/admin/gestions_personnels/allPersonnels.html.twig
+++ b/templates/admin/gestions_personnels/allPersonnels.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<section class="bg-white dark:bg-gray-900">
-		<div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+		<div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 flex-grow min-h-screen flex flex-col">
 			<div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12">
 				<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Gestions</h2>
 			</div>
@@ -11,37 +11,23 @@
 				<!-- Pricing Card -->
 				<div class="flex flex-col justify-center items-center p-4 mx-auto max-w-xl w-full text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 dark:bg-gray-800 dark:text-white" style="height: 500px;">
 					<h3 class="text-5xl font-semibold">
-						<a href="{{ path('app_statistiques') }}" class="text-primary-600 hover:underline dark:text-primary-400">
-							Statistiques
+						<a href="{{ path('ajout_personnels') }}" class="text-primary-600 hover:underline dark:text-primary-400">
+							Ajouter une personne
 						</a>
 					</h3>
 				</div>
 
 				<div class="flex flex-col justify-center items-center p-4 mx-auto max-w-xl w-full text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 dark:bg-gray-800 dark:text-white" style="height: 500px;">
 					<h3 class="text-5xl font-semibold">
-						<a href="{{ path('app_personnels') }}" class="text-primary-600 hover:underline dark:text-primary-400">
-							Personnels
+						<a href="{{ path('all_updatePersonnels') }}" class="text-primary-600 hover:underline dark:text-primary-400">
+							Modifier une personne
 						</a>
 					</h3>
 				</div>
 				<div class="flex flex-col justify-center items-center p-4 mx-auto max-w-xl w-full text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 dark:bg-gray-800 dark:text-white" style="height: 500px;">
 					<h3 class="text-5xl font-semibold">
-						<a href="" class="text-primary-600 hover:underline dark:text-primary-400">
-							Produits
-						</a>
-					</h3>
-				</div>
-                <div class="flex flex-col justify-center items-center p-4 mx-auto max-w-xl w-full text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 dark:bg-gray-800 dark:text-white" style="height: 500px;">
-					<h3 class="text-5xl font-semibold">
-						<a href="{{ path('app_maintenance') }}" class="text-primary-600 hover:underline dark:text-primary-400">
-							Maintenance
-						</a>
-					</h3>
-				</div>
-                <div class="flex flex-col justify-center items-center p-4 mx-auto max-w-xl w-full text-center text-gray-900 bg-white rounded-lg border border-gray-100 shadow dark:border-gray-600 dark:bg-gray-800 dark:text-white" style="height: 500px;">
-					<h3 class="text-5xl font-semibold">
-						<a href="{{ path('app_reparations') }}" class="text-primary-600 hover:underline dark:text-primary-400">
-							Réparation
+						<a href="{{ path('all_deletePersonnels') }}" class="text-primary-600 hover:underline dark:text-primary-400">
+							Supprimer une personne
 						</a>
 					</h3>
 				</div>
