--- a/templates/admin/gestions_produits/maintenance.html.twig
+++ b/templates/admin/gestions_produits/maintenance.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	{{dump(maintenancesData)}}
 	<section class="bg-gray-50 dark:bg-gray-900 p-3 sm:p-5">
 		<div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
 			<h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"></h2>
@@ -9,7 +8,7 @@
 				Liste des produits en attente de maintenance ou en maintenance. Pour limiter la liste sur les produits qui ne sont pas encore envoyé en maintenance tapez "En attente de maintenance" dans la barre de recherche.
 			</p>
 		</div>
-		<div class="mx-auto max-w-screen-xl px-4 lg:px-12">
+		<div class="flex flex-col md:h-screen lg:py-0 mx-auto max-w-screen-xl px-4 lg:px-12">
 			<div class="flex justify-between items-center mb-4">
 				<div class="relative">
 					<input type="text" id="searchInput" class="search-bar w-full px-4 py-2 text-sm text-gray-900 bg-white border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:focus:ring-blue-500" placeholder="Search..." value="En attente de maintenance"/>
