--- a/templates/admin/gestions_produits/reparation.html.twig
+++ b/templates/admin/gestions_produits/reparation.html.twig
@@ -8,7 +8,7 @@
 				Liste des produits signalés. Pour limiter la liste sur les produits qui ne sont pas encore envoyé en réparation tapez "En attente de réparation" dans la barre de recherche.
 			</p>
 		</div>
-		<div class="mx-auto max-w-screen-xl px-4 lg:px-12">
+		<div class="flex flex-col md:h-screen lg:py-0 mx-auto max-w-screen-xl px-4 lg:px-12">
 			<div
 				class="flex justify-between items-center mb-4">
 				<div class="relative">
