--- a/templates/admin/statistiques/statistiques.html.twig
+++ b/templates/admin/statistiques/statistiques.html.twig
@@ -8,7 +8,7 @@
 				Statistiques sur les utilisateurs avec les produits
 			</p>
 		</div>
-		<div class="mx-auto max-w-screen-xl px-4 lg:px-12">
+		<div class="flex flex-col md:h-screen lg:py-0 mx-auto max-w-screen-xl px-4 lg:px-12">
 			<div
 				class="flex justify-between items-center mb-4">
 				<!-- Recherche -->
