gestion de produit et utilisateur fini il ne manque que les notification

--- a/templates/admin/gestions_personnels/allUpdatePersonnels.html.twig
+++ b/templates/admin/gestions_personnels/allUpdatePersonnels.html.twig
@@ -35,7 +35,7 @@
 								<td class="px-4 py-3">{{ data.role.name }}</td>
 								<td class="px-4 py-3">
 									<a href="{{ path('update_personnels', {'id': data.id}) }}" class="text-white bg-blue-500 hover:bg-blue-700 px-3 py-2 rounded">
-										Envoyer
+										Modifier
 									</a>
 								</td>
 							</tr>
