--- a/templates/admin/gestions_personnels/personnels_form.html.twig
+++ b/templates/admin/gestions_personnels/personnels_form.html.twig
@@ -34,7 +34,7 @@
 					</button>
 					{{ form_end(form) }}
 					{% for message in app.flashes('success') %}
-						<div class="alert alert-success">{{ message }}</div>
+						<div class="text-white alert alert-success">{{ message }}</div>
 					{% endfor %}
 				</div>
 			</div>
