--- a/templates/admin/gestions_personnels/allDeletePersonnels.html.twig
+++ b/templates/admin/gestions_personnels/allDeletePersonnels.html.twig
@@ -7,6 +7,9 @@
 			<p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">
 				Liste des utilisateurs. Vous pouvez utiliser la recherche pour filtrer la liste ou pour trouver un utilisateur spécifique.
 			</p>
+			{% for message in app.flashes('success') %}
+				<div class="text-white alert alert-success">{{ message }}</div>
+			{% endfor %}
 		</div>
 		<div class="flex flex-col md:h-screen lg:py-0 mx-auto max-w-screen-xl px-4 lg:px-12">
 			<div class="flex justify-between items-center mb-4">
