--- a/templates/admin/gestions_personnels/updatePersonnels_form.html.twig
+++ b/templates/admin/gestions_personnels/updatePersonnels_form.html.twig
@@ -6,7 +6,7 @@
             <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                        Modifier un produit
+                        Modifier un utilisateur
                     </h1>
                     {{ form_start(form, { 'method': 'POST', 'attr': { 'class': 'space-y-4 md:space-y-6' } }) }}
                     <div>
@@ -15,34 +15,19 @@
                         {{ form_errors(form.nom) }}
                     </div>
                     <div>
-                        {{ form_label(form.categorie, 'Catégorie', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
-                        {{ form_widget(form.categorie, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
-                        {{ form_errors(form.categorie) }}
+                        {{ form_label(form.email, 'Email', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
+                        {{ form_widget(form.email, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
+                        {{ form_errors(form.email) }}
                     </div>
                     <div>
-                        {{ form_label(form.etat, 'État', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
-                        {{ form_widget(form.etat, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
-                        {{ form_errors(form.etat) }}
+                        {{ form_label(form.password, 'Mot de passe', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
+                        {{ form_widget(form.password, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
+                        {{ form_errors(form.password) }}
                     </div>
                     <div>
-                        {{ form_label(form.date_achat, 'Date d\'achat', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
-                        {{ form_widget(form.date_achat, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
-                        {{ form_errors(form.date_achat) }}
-                    </div>
-                    <div>
-                        {{ form_label(form.planning, 'Planning', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
-                        {{ form_widget(form.planning, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
-                        {{ form_errors(form.planning) }}
-                    </div>
-                    <div>
-                        {{ form_label(form.categorie_rayon, 'Catégorie Rayon', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
-                        {{ form_widget(form.categorie_rayon, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
-                        {{ form_errors(form.categorie_rayon) }}
-                    </div>
-                    <div>
-                        {{ form_label(form.etagere, 'Étagère', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
-                        {{ form_widget(form.etagere, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
-                        {{ form_errors(form.etagere) }}
+                        {{ form_label(form.role, 'Rôle', { 'label_attr': { 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' } }) }}
+                        {{ form_widget(form.role, { 'attr': { 'class': 'bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' } }) }}
+                        {{ form_errors(form.role) }}
                     </div>
                     <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
                         Modifier
